Add external database container, update testing to include multiple django app servers, run django_manage tasks via included file so they run in lockstep across hosts.

--- a/tests/templates/local_settings.py.j2
+++ b/tests/templates/local_settings.py.j2
@@ -1,1 +1,12 @@
 STATIC_ROOT = "{{ django_static_root }}"
+
+DATABASES = {
+    "default": {
+        "ENGINE": "django.db.backends.postgresql",
+        "NAME": "{{ django_user_db }}",
+        "USER": "{{ django_user_db }}",
+        "PASSWORD": "{{ django_db_password }}",
+        "HOST": "django_postgres",
+        "PORT": "5432",
+    }
+}
